--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bcrypt==3.1.7
 cffi==1.13.2
 Click==7.0
 Flask==1.1.1
+Flask-JWT-Extended==3.24.1
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
@@ -10,6 +11,7 @@ Jinja2==2.10.3
 MarkupSafe==1.1.1
 psycopg2==2.8.4
 pycparser==2.19
+PyJWT==1.7.1
 pytz==2019.3
 six==1.13.0
 SQLAlchemy==1.3.11
